# utrace

./: .gitignore  Cargo.toml  README.md
examples/rtic/: Cargo.toml  Embed.toml
examples/rtic/.cargo/: config.toml
examples/rtic/src/: main.rs
rtic_test/: Cargo.toml  Embed.toml
rtic_test/src/: main.rs
rtt_trace/: Cargo.toml  build.rs  rtt_trace_linker.x.in
rtt_trace/src/: encoding.rs  lib.rs
rtt_trace_macros/: Cargo.toml
rtt_trace_macros/src/: lib.rs
transports/utrace_rtt/: Cargo.toml
transports/utrace_rtt/src/: lib.rs
utrace/: Cargo.toml  build.rs  utrace_linker.x.in
utrace/proptest-regressions/: encoding.txt
utrace/src/: encoding.rs  globals.rs  lib.rs  tracer.rs  transport.rs
utrace_core/: Cargo.toml
utrace_core/src/: encoding.rs  lib.rs  trace_point.rs
utrace_macros/: Cargo.toml
utrace_macros/src/: codegen.rs  lib.rs
utrace_parser/: Cargo.toml
utrace_parser/src/: elf_parser.rs  lib.rs  main.rs  stream_decoder.rs  stream_parser.rs  trace_point.rs
