[workspace]
members = [
    "utrace_macros",
    "utrace",
    "transports/utrace_rtt",
    "utrace_parser",
    "utrace_core",
]

exclude = ["examples/rtic"]

resolver = "2"

[profile.release]
lto = true

[profile.release.package.rtic_test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
incremental = false
codegen-units = 1
