[package]
name = "utrace"
edition = "2021"
license = "MIT or Apache-2.0"
description = "Instrumentation-based profiling library for embedded and async"
readme = "../README.md"
keywords = ["embedded", "profiling", "async"]
version = "0.1.0"

[dependencies]
critical-section = "1.1.2"
defmt = "0.3.6"
utrace_core = { path = "../utrace_core" }
utrace_macros = { path = "../utrace_macros" }

[dev-dependencies]
proptest = "1.4.0"

[features]
