[package]
name = "utrace"
edition = "2021"
version = "0.1.1"
authors = [
    "Evgenii Guberna <gubik123@gmail.com>",
    "Dmitriy Negrov <dmitriynegrov@gmail.com>",
]
categories = ["embedded", "development-tools::profiling", "no-std"]
repository = "https://github.com/gubik123/utrace"
license = "MIT OR Apache-2.0"
description = "Instrumentation-based profiling library for embedded targets with async support"
readme = "../README.md"
keywords = ["embedded", "profiling", "async"]

[dependencies]
critical-section = "1.1.2"
defmt = "0.3.6"
utrace_core = { version = "0.1.1", path = "../utrace_core" }
utrace_macros = { version = "0.1.1", path = "../utrace_macros" }


[features]
