[package]
name = "utrace_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.82", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }

[dev-dependencies]
proptest = "1.4.0"

[features]
std = ["dep:anyhow", "dep:serde", "dep:serde_json"]
