[package]
name = "utrace_core"
version = "0.1.0"
edition = "2021"
authors = [
    "Evgenii Guberna <gubik123@gmail.com>",
    "Dmitriy Negrov <dmitriynegrov@gmail.com>",
]
categories = ["embedded", "development-tools::profiling", "no-std"]
repository = "https://github.com/gubik123/utrace"
license = "MIT OR Apache-2.0"
description = "Instrumentation-based profiling library for embedded targets with async support"
readme = "../README.md"
keywords = ["embedded", "profiling", "async"]

[dependencies]
anyhow = { version = "1.0.82", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }

[dev-dependencies]
proptest = "1.4.0"

[features]
std = ["dep:anyhow", "dep:serde", "dep:serde_json"]
