[package]
name = "utrace_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "utrace-capture"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
gimli = { version = "0.28.1", features = [
    "read",
    "std",
    "read-all",
    "fallible-iterator",
    "endian-reader",
    "read-core",
] }
memmap2 = "0.9.4"
object = "0.34.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
