[package]
name = "utrace_parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "utrace-capture"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.81"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5.4", features = ["derive"] }
gimli = { version = "0.29.0", features = [
    "read",
    "std",
    "read-all",
    "fallible-iterator",
    "endian-reader",
    "read-core",
] }
memmap2 = "0.9.4"
object = "0.35.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "fs",
], optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utrace_core = { path = "../utrace_core", features = ["std"] }

[features]
cli = ["dep:tokio"]
