[package]
name = "utrace_parser"
version = "0.1.0"
edition = "2021"
authors = [
    "Evgenii Guberna <gubik123@gmail.com>",
    "Dmitriy Negrov <dmitriynegrov@gmail.com>",
]
categories = ["embedded", "development-tools::profiling", "no-std"]
repository = "https://github.com/gubik123/utrace"
license = "MIT OR Apache-2.0"
description = "Instrumentation-based profiling library for embedded targets with async support"
readme = "../README.md"
keywords = ["embedded", "profiling", "async"]

[[bin]]
name = "utrace-capture"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.81"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5.4", features = ["derive"] }
gimli = { version = "0.29.0", features = [
    "read",
    "std",
    "read-all",
    "fallible-iterator",
    "endian-reader",
    "read-core",
] }
memmap2 = "0.9.4"
object = "0.35.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "io-util",
    "io-std",
    "fs",
], optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utrace_core = { version = "0.1.0", path = "../utrace_core", features = ["std"] }

[features]
cli = ["dep:tokio"]
